--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
