--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kanban-ts-2",
   "version": "0.1.0",
+  "homepage": "https://rudikurniawan99.github.io/kanban-deploy-test",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -10,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
@@ -21,6 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -44,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/gh-pages": "^3.2.1",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.2",
